--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
 </header>
 <nav>
-<a href="#">Menu</a>
 <a href="#">Home</a>
 <a href="#">Notícias</a>
-<a href="#">Curiosidades</a>
-<a href="#">Fale Conosco</a>
+<a href="#">Contato</a>
 </nav>
 <main>
 <article>
